feat: 위도, 경도 csv 데이터 파싱 - csv 파일로부터 데이터 파싱 - 추후 gpx 파일로부터 데이터 파싱 기능 추가 필요